fabric/testdata/out/ing_fabric-demo-app-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-http2":"true","zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"1b09e061-d197-4ded-bf66-227551ae018c","deployment-id":"d-djq37m98ip2xqujdwbnxbucyp","pipeline-id":"l-siee3x8vnzbr7czzto12ofbji"},"name":"fabric-demo-app-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"fabric-demo-app.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-demo-app","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-http2: "true"
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2020-07-09T13:29:59Z"
  generation: 1
  labels:
    controller-uid: 1b09e061-d197-4ded-bf66-227551ae018c
    deployment-id: d-djq37m98ip2xqujdwbnxbucyp
    pipeline-id: l-siee3x8vnzbr7czzto12ofbji
  name: fabric-demo-app-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-demo-app
    uid: 1b09e061-d197-4ded-bf66-227551ae018c
  resourceVersion: "1357488575"
  uid: a700ca59-7f30-4138-9101-0bd4acc63ad9
spec:
  rules:
  - host: fabric-demo-app.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-demo-app
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
